spacing correction

--- a/src/components/ProgramIncludes/program.module.scss
+++ b/src/components/ProgramIncludes/program.module.scss
@@ -17,7 +17,7 @@
     width: 100%;
     @include flexCenter(column);
     background-color: #F4F9FE;
-    padding:20px;
+    padding:3rem;
 }
 
 .Heading{
@@ -34,7 +34,7 @@
 
 .Program{
     width:45%;
-    padding-top:4rem;
+    padding:3rem 0 1rem 0;
     @include flexCenter(row);
     .Img{
         height: 100%;
@@ -66,6 +66,9 @@
 }
 
 @media(max-width: 576px){
+    .Container{
+        padding:2rem;
+    }
     .Heading{
         @include Font(Noto Sans, 1.5rem , bold ,1.7rem , #000000 );
     }
@@ -74,7 +77,7 @@
     }
     .Program{
         width:90%;
-        padding-top:3rem;
+        padding:2rem 0 1rem 0;
         .Img{
             height: 100%;
             width:40%;
@@ -84,7 +87,7 @@
             @include Font(Noto Sans, 0.8rem , bold ,1rem , #2E388E  )
         }
         .Content{
-            margin-top: 1rem;
+            margin-top: 0.7rem;
             @include Font(Noto Sans, 0.6rem , 300 ,0.8rem , #000000  )
         }
     }
